@@ -7,9 +7,6 @@ Legend:
 Plans for 0.4.0
 ===============
 
-  [D] Add testing to existing modules
-  [ ] Rounding errors when undoing after editing in unnative timings
-
   New Features:
     [ ] Support SSA & ASS
           [ ] Reading
@@ -17,20 +14,20 @@ Plans for 0.4.0
           [ ] Tags
                 * Use parser for decoding?
                 * Encoding should be trivial
-    [ ] Timing shift
+    [ ] Timing shift F2
           * Shift amount: seconds/frames
               * Spin buttons
           * Target: selection/all
-    [ ] Timing adjust
+    [ ] Timing adjust F3
           * 2 points, for which current and desired as times/frames
               * Frame: spin button
               * Time: need a new widget, TimeEntry based on CellRendererTime
           * Target: selection/all
-    [ ] Framerate conversion
+    [ ] Framerate conversion F5
           * Input framerate, output framerate
               - Combo boxes
           * Target: selection/all?
-    [ ] Fix durations
+    [ ] Fix durations F4
           * Analysis?
           * Duration per character
           * Minimum time between subs
@@ -43,6 +40,7 @@ Plans for 0.4.0
   Bug Fixes:
     [D] Various errors in Micro DVD tag conversions
     [D] Newline counted as a character in text length statusbar
+    [D] Rounding errors when undoing after editing in unnative units
 
   New Translations:
     [D] Gil Forcada: Catalan (ca)
